@@ -5,18 +5,26 @@ import org.antlr.v4.runtime.*;
 import org.antlr.v4.runtime.tree.ParseTree;
 import org.antlr.v4.runtime.tree.ParseTreeWalker;
 import org.graphstream.graph.Graph;
+import org.graphstream.graph.implementations.MultiGraph;
 import org.graphstream.graph.implementations.SingleGraph;
 import org.graphstream.stream.file.FileSinkGML;
 
 public class Main {
     private static Graph ast = new SingleGraph("ast");
     private static FileSinkGML out1 = new FileSinkGML();
+    private static int id = 0;
+    private static Graph task = new MultiGraph("task");
+    private static FileSinkGML out2 = new FileSinkGML();
     public static void main(String[] args) {
 
         try {
             out1.begin("AST.gml");
             ast.addSink(out1);
             ast.setStrict(false);
+
+            out2.begin("TASK.gml");
+            task.addSink(out2);
+            task.setStrict(false);
 
             CharStream codePointCharStream = CharStreams.fromFileName("input.txt");
             STLexer lexer = new STLexer(codePointCharStream);
@@ -30,16 +38,74 @@ public class Main {
             ASTNode g = astL.getGoal();
             semanticAnalysis(g);
             semanticAnalysis(g);
+            taskConstruct(g);
+            System.out.println(" ");
+            taskConstruct(g);
+            System.out.println(" ");
+            taskConstruct(g);
+            drawTask(g);
             /*while (g.getCOMPLETE()!= true){
                 semanticAnalysis(g);
             }*/
             drawGraph(g);
-
+            out2.end();
             out1.end();
             //Trees.inspect(tree, parser);
         }catch (IOException e) {
             System.err.println("Input file not found.");
             return;
+        }
+    }
+
+    public static void drawTask(ASTNode start){
+        ASTNode current = start;
+
+        if (current.getName().equals("Goal")){
+            task.addNode("Start");
+            task.getNode("Start").addAttribute("label","Start");
+            TaskNode first = current.getFirst();
+            TaskNode last = current.getLast();
+            TaskNode el = current.getChildren().get(0).getNext();
+            addTaskG(first);
+            addTaskG(last);
+            addTaskG(el);
+
+            task.addEdge("Start CE "+first.getTask(),"Start",String.valueOf(first.getId()));
+            task.addEdge(last.getTask()+" CE "+el.getTask(),String.valueOf(last.getId()),String.valueOf(el.getId()));
+
+            drawTask(current.getChildren().get(0));
+
+        }else if (current.getName().equals("Constant")){
+
+        }else if(current.getArgumentType().equals("UE")){
+
+            TaskNode ue = current.getLast();
+            TaskNode e = current.getChildren().get(0).getLast();
+            addTaskG(ue);
+            addTaskG(e);
+
+            task.addEdge(e.getId()+" CE " + ue.getId(),String.valueOf(e.getId()),String.valueOf(ue.getId()));
+            task.addEdge(ue.getId()+" DE " + e.getId(),String.valueOf(ue.getId()),String.valueOf(e.getId()));
+
+            drawTask(current.getChildren().get(0));
+
+        }else if(current.getArgumentType().equals("BE")){
+
+            TaskNode e1l = current.getChildren().get(0).getLast();
+            TaskNode e2f = current.getChildren().get(1).getFirst();
+            TaskNode e2l = current.getChildren().get(1).getLast();
+            TaskNode b = current.getLast();
+            addTaskG(e1l);
+            addTaskG(e2f);
+            addTaskG(e2l);
+            addTaskG(b);
+            task.addEdge(e1l.getId()+" CE " + e2f.getId(),String.valueOf(e1l.getId()),String.valueOf(e2f.getId()));
+            task.addEdge(e2l.getId()+" CE " + b.getId(),String.valueOf(e2l.getId()),String.valueOf(b.getId()));
+            task.addEdge(b.getId()+" DE " + e1l.getId(),String.valueOf(b.getId()),String.valueOf(e1l.getId()));
+            task.addEdge(b.getId()+" DE " + e2l.getId(),String.valueOf(b.getId()),String.valueOf(e2l.getId()));
+
+            drawTask(current.getChildren().get(0));
+            drawTask(current.getChildren().get(1));
         }
     }
 
@@ -125,47 +191,76 @@ public class Main {
         }
     }
 
-    public static void TaskConstruct(ASTNode start){
+    public static void taskConstruct(ASTNode start){
         ASTNode current = start;
+
         if (current.getName().equals("Goal")){
             //inh
-            TaskNode t = new TaskNode("Terminate");
+            TaskNode t = new TaskNode("Terminate",id);
+            id++;
             t.setKind("Void");
             current.getChildren().get(0).setNext(t);
 
-            TaskConstruct(current.getChildren().get(0));
+            taskConstruct(current.getChildren().get(0));
             ASTNode child =current.getChildren().get(0);
             //syn
-            current.getChildren().get(0).setCoerce(false);
             current.setFirst(child.getFirst());
             current.setLast(child.getLast());
 
         }else if (current.getName().equals("Constant")){
-            current.setCOMPLETE(true);
-            current.setKind(current.getArgumentType());
+            TaskNode t = new TaskNode("Const",id);
+            id++;
+            t.setKind(current.getKind());
+            t.setValue(current.getOP_code());
+            t.setCoerce(current.getCoerce());
+            t.setNext(current.getNext());
+            current.setLast(t);
+            current.setFirst(current.getLast());
+
 
         }else if(current.getArgumentType().equals("UE")){
             //inh
             current.getChildren().get(0).setNext(current.getLast());
-            TaskConstruct(current.getChildren().get(0));
+            taskConstruct(current.getChildren().get(0));
             ASTNode child =current.getChildren().get(0);
             //syn
             current.setFirst(child.getFirst());
-            TaskNode t = new TaskNode("UE");
+            TaskNode t = new TaskNode("UE",id);
+            id++;
             t.setKind(current.getKind());
             t.setOpCode(current.getOP_code());
             t.setCoerce(current.getCoerce());
+            t.setNext(current.getNext());
+            t.setPred(child.getLast());
             current.setLast(t);
 
 
         }else if(current.getArgumentType().equals("BE")){
-
-            TaskConstruct(current.getChildren().get(0));
-            TaskConstruct(current.getChildren().get(1));
+            //inh
+            current.getChildren().get(0).setNext(current.getChildren().get(1).getFirst());
+            current.getChildren().get(1).setNext(current.getLast());
+            taskConstruct(current.getChildren().get(0));
+            taskConstruct(current.getChildren().get(1));
             ASTNode left = current.getChildren().get(0);
             ASTNode right = current.getChildren().get(1);
-
+            //syn
+            current.setFirst(left.getFirst());
+            TaskNode t = new TaskNode("BE",id);
+            id++;
+            t.setKind(current.getKind());
+            t.setOpCode(current.getOP_code());
+            t.setCoerce(current.getCoerce());
+            t.setNext(current.getNext());
+            t.setPredLeft(left.getLast());
+            t.setPredRight(right.getLast());
+            current.setLast(t);
         }
+
+        if(current.getNext() != null){
+            System.out.println("1 "+current.getFirst().getTask()+" "+current.getNext().getTask());
+            System.out.println("2 "+current.getLast().getTask()+" "+current.getNext().getTask());
+        }
+
     }
 
     private static boolean isNumeric(String op){
@@ -188,5 +283,17 @@ public class Main {
     private static boolean isCompare(String op){
         String [] a = {"==", "<>"};
         return Arrays.asList(a).contains(op);
+    }
+    private static void addTaskG(TaskNode n){
+        if(n.getTask().equals("Const")){
+            task.addNode(String.valueOf(n.getId()));
+            task.getNode(String.valueOf(n.getId())).addAttribute("label", n.getValue()+"("+n.getKind()+" "+n.getCoerce()+")");
+        }else if(n.getTask().equals("Terminate")){
+            task.addNode(String.valueOf(n.getId()));
+            task.getNode(String.valueOf(n.getId())).addAttribute("label", n.getTask()+"("+n.getKind()+" "+n.getCoerce()+")");
+        }else{
+            task.addNode(String.valueOf(n.getId()));
+            task.getNode(String.valueOf(n.getId())).addAttribute("label", n.getOpCode()+"("+n.getKind()+" "+n.getCoerce()+")");
+        }
     }
 }
